Fixed wrong label alignment on rt chart

--- a/dashboard/static/dashboard/css/dashboard.css
+++ b/dashboard/static/dashboard/css/dashboard.css
@@ -49,7 +49,7 @@ Collapsing sidebar
     background-color: #d0dde1;  
     min-width: 50%;
     max-width: 50%;
-    transition: min-width 0.5s ease-in, max-width 0.5s ease-in;
+    transition: min-width 0.3s ease-in, max-width 0.3s ease-in;
     color: #1f2d41 !important;
 }
 
@@ -68,7 +68,7 @@ Collapsing sidebar
     white-space: nowrap;
     overflow: hidden;
     padding-top: 0.2em;
-    transition: visibility 0.5s ease-in-out 0.5s, opacity 0.5s ease-in-out, width 0.4s ease-in 0.5s, width ease-out 0.6s;
+    transition: visibility 0.3s ease-in-out 0.3s, opacity 0.3s ease-in-out, width 0.2s ease-in 0.3s, width ease-out 0.4s;
     /* transition: all 0.5s ease-in-out; */
 }
 
@@ -117,6 +117,10 @@ Chart related styling
 label.leaflet-panel-layers-title {
     line-height: inherit;
     font-size: .8rem;
+}
+
+.leaflet-container a {
+	color: black;
 }
 
 .rt-chart{
